--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Flask==3.0.2
-Flask-SQLAlchemy==3.1.1
-Flask-Cors==4.0.0
-python-dotenv==1.0.1
-SQLAlchemy==2.0.28 
+Flask==2.0.1
+Flask-SQLAlchemy==2.5.1
+Flask-Cors==3.0.10
+python-dotenv==0.19.0
+SQLAlchemy==2.0.28
+PyJWT==2.1.0
+Werkzeug==2.0.1 
